from container styled

--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
     <title>Google</title>
   </head>
   <style>
-    div {
-      display: block;
-    }
     #googleLogo {
       display: block;
       padding-top: 109px;
       margin-left: auto;
       margin-right: auto;
       width: auto;
+    }
+    #form-container {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      height: 44px;
+      width: 582px;
+      border: 1px solid #dfe1e5;
+      border-radius: 24px;
+
     }
     form {
       text-align: center;
