added search bar icons

--- a/index.html
+++ b/index.html
@@ -14,17 +14,26 @@
       width: auto;
     }
     #form-container {
-      display: block;
+      display: grid;
+      grid-template-columns: 40px 1fr 40px;
       margin-left: auto;
       margin-right: auto;
+      margin-top: 30px;
       height: 44px;
       width: 582px;
-      border: 1px solid #dfe1e5;
+      border: 1px solid #c1c2c5e7;
       border-radius: 24px;
-
     }
     form {
-      text-align: center;
+      color: blue;
+      justify-self: center;
+      align-self:flex-start;
+    }
+    #search-icon {
+        height: 20px;
+        width: auto;
+        justify-self: center;
+        align-self: center;
     }
   </style>
   <body>
@@ -35,7 +44,7 @@
       height="92"
     />
     <div id="form-container">
-      <form>
+       <img id="search-icon" src="images/search-icon.png" alt="Search icon">
         <input
           id="search"
           maxlength="2048"
@@ -43,7 +52,7 @@
           role="combobox"
           title="Search"
         />
-      </form>
+        <img id="search-icon" src="images/1200px-Google_mic.svg.png" alt="voice search">
     </div>
   </body>
 </html>
