form-container completed

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Google</title>
   </head>
   <style>
-      img {
-        image-rendering: optimizeQuality;
-      }
+    img {
+      image-rendering: optimizeQuality;
+    }
     #googleLogo {
       display: block;
       padding-top: 109px;
@@ -18,7 +18,7 @@
     }
     #form-container {
       display: grid;
-      grid-template-columns: 50px 1fr 50px;
+      grid-template-columns: 50px 1fr 55px;
       margin-left: auto;
       margin-right: auto;
       margin-top: 30px;
@@ -57,11 +57,16 @@
       height="92"
     />
     <div id="form-container">
-      <img id="search-icon" src="images/search-icon.png" alt="Search icon" />
+      <img
+        id="search-icon"
+        src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_Magnifying_Glass.svg"
+        alt="Search icon"
+        style="opacity: 0.55"
+      />
       <input id="search" type="text" title="Search" />
       <img
         id="search-icon"
-        src="images/1200px-Google_mic.svg.png"
+        src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Google_mic.svg"
         alt="voice search"
       />
     </div>
