--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <body>
     <img
       id="googleLogo"
-      src="/images/googlelogo_color_272x92dp.png"
+      src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg"
       alt="Google"
       height="92"
     />
@@ -70,5 +70,6 @@
         alt="voice search"
       />
     </div>
+    <h1>test</h1>
   </body>
 </html>
