added test text

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       image-rendering: optimizeQuality;
     }
     nav {
-        height: 50px;
-        width: 100%;
-        margin: 0;
-        border: 1px solid black;
+      height: 50px;
+      width: 100%;
+      margin: 0;
+      border: 1px solid black;
     }
     .nav-left {
       float: left;
@@ -110,5 +110,6 @@
         alt="voice search"
       />
     </div>
+    <h1>test</h1>
   </body>
 </html>
