--- a/index.html
+++ b/index.html
@@ -18,24 +18,41 @@
       padding: 0;
       font-family: Arial, Helvetica, sans-serif;
       font-size: 13px;
-      color: rgba(0,0,0,0.87);
+      color: rgba(0, 0, 0, 0.87);
     }
     .nav-left {
-        justify-self: start;
-        align-self: center;
-        padding: 0 10px;
+      justify-self: start;
+      align-self: center;
+      padding: 0 10px;
     }
 
     .nav-right {
-        justify-self: right;
-        align-self: center;
-        padding: 0 11px;
+      justify-self: right;
+      align-self: center;
+      padding: 0 11px;
     }
-    
+
     #menu-icon {
       height: 20px;
       image-rendering: crisp-edges;
       opacity: 0.55;
+    }
+    #menu-icon:hover {
+        opacity: 1;
+    }
+    a:link {
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+    #sign-in {
+        text-decoration: none;
+        background-color:rgb(66, 133, 244);
+        color: white;
+        line-height: 28px;
+        border-radius: 2px;
+        margin: 0 20px;
     }
     #googleLogo {
       display: block;
@@ -78,6 +95,7 @@
     }
   </style>
   <body>
+    <!--Nav Bar-->
     <nav>
       <p class="nav-left">About</p>
       <p class="nav-left">Store</p>
@@ -85,14 +103,16 @@
       <p class="nav-right">Gmail</p>
       <p class="nav-right">Images</p>
       <img class="nav-right" id="menu-icon" src="images/menu-icon.png" alt="" />
-      <a class="nav-right" href="">Sign in</a>
+      <a class="nav-right" id="sign-in" href="">Sign in</a>
     </nav>
+    <!--Google Logo-->
     <img
       id="googleLogo"
       src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg"
       alt="Google"
       height="92"
     />
+    <!--Search bar-->
     <div id="form-container">
       <img
         id="search-icon"
