--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
       opacity: 1;
       cursor: pointer;
     }
-    a:link {
+    nav a:link {
       text-decoration: none;
       color: rgba(0, 0, 0, 0.87);
     }
-    a:hover {
+    nav a:hover {
       text-decoration: underline;
       color: rgba(0, 0, 0, 0.87);
     }
-    a:visited {
+    nav a:visited {
       color: rgba(0, 0, 0, 0.87);
     }
     #sign-in {
@@ -107,7 +107,7 @@
       bottom: 0;
       width: 100%;
       background-color: #f2f2f2;
-      color: #5f6368;
+      color: #5f6368 !important;
       display: grid;
       grid-template-columns: auto auto auto 1fr auto auto auto;
       font-family: Arial, Helvetica, sans-serif;
@@ -117,19 +117,30 @@
     .footer-left {
       justify-self: start;
       align-self: center;
-      padding: 0 10px;
+      padding: 0 13px;
     }
 
     .footer-right {
       justify-self: right;
       align-self: center;
-      padding: 0 11px;
+      padding: 0 13px;
+    }
+    footer a:link {
+      text-decoration: none;
+      color: #5f6368;
+    }
+    footer a:hover {
+      text-decoration: underline;
+      color: #5f6368;
+    }
+    footer a:visited {
+      color: #5f6368;
     }
   </style>
   <body>
     <!--Nav Bar-->
     <nav>
-      <a href="" class="nav-left">About</a>
+      <a href="" class="nav-left" >About</a>
       <a href="" class="nav-left">Store</a>
       <p></p>
       <a href="" class="nav-right">Gmail</a>
@@ -161,7 +172,7 @@
     </div>
     <!--Footer-->
     <footer>
-      <a href="" class="footer-left">Advertising</a>
+      <a href="" class="footer-left" style="margin-left: 14px;">Advertising</a>
       <a href="" class="footer-left">Business</a>
       <a href="" class="footer-left">How Search works</a>
       <p></p>
