--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <body>
     <!--Nav Bar-->
     <nav>
-      <a href="" class="nav-left" >About</a>
+      <a href="" class="nav-left">About</a>
       <a href="" class="nav-left">Store</a>
       <p></p>
       <a href="" class="nav-right">Gmail</a>
@@ -172,13 +172,13 @@
     </div>
     <!--Footer-->
     <footer>
-      <a href="" class="footer-left" style="margin-left: 14px;">Advertising</a>
+      <a href="" class="footer-left" style="margin-left: 14px">Advertising</a>
       <a href="" class="footer-left">Business</a>
       <a href="" class="footer-left">How Search works</a>
       <p></p>
       <a href="" class="footer-right">Privacy</a>
       <a href="" class="footer-right">Terms</a>
-      <a href="" class="footer-right">Setting</a>
+      <a href="" class="footer-right" style="margin-right: 14px">Setting</a>
     </footer>
   </body>
 </html>
