--- a/index.html
+++ b/index.html
@@ -100,6 +100,26 @@
     #search:focus {
       outline: none;
     }
+    #button-container {
+      width: 100%;
+      height: 36px;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      margin-top: 30px;
+    }
+    #button-container button {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 14px;
+      padding: 0 16px;
+      margin: 0 6px;
+      border: 1px solid #f2f2f2;
+      border-radius: 4px;
+      color: #5f6368;
+      background-color: #f2f2f2;
+      cursor: pointer;
+    }
     footer {
       position: fixed;
       height: 40px;
@@ -169,6 +189,11 @@
         src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Google_mic.svg"
         alt="voice search"
       />
+    </div>
+    <!--below search buttons-->
+    <div id="button-container">
+      <button>Google Search</button>
+      <button>I'm Feeling Lucky</button>
     </div>
     <!--Footer-->
     <footer>
