--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       margin: 0 20px;
       cursor: default;
     }
+    #sign-in:hover {
+      box-shadow: rgba(0, 0, 0, 0.15);
+    }
     #googleLogo {
       display: block;
       padding-top: 109px;
@@ -119,6 +122,12 @@
       color: #5f6368;
       background-color: #f2f2f2;
       cursor: pointer;
+    }
+    #button-container button:hover {
+      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+      background-color: #f8f8f8;
+      border: 1px solid #c6c6c6;
+      color: #222;
     }
     footer {
       position: fixed;
